--- a/frontend/src/components/ItSolutions/style.css
+++ b/frontend/src/components/ItSolutions/style.css
@@ -2,26 +2,20 @@
 
 
 .SolutionsTitle {
-    font-family: 'Panton';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 54px;
-    margin-bottom: 90px;
-    /* identical to box height, or 150% */
-
-    display: flex;
-    align-items: center;
-
-    /* Neutral */
-
-    color: #323232;
+    margin-top: 0!important;
 }
 
 .SecondaryFrameTitle {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    font-family: 'Panton';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 54px;
+    color: #323232;
+    margin: 90px 0;
 }
 
 .FrameTitleLine {
