--- a/frontend/src/components/OurProjects/style.css
+++ b/frontend/src/components/OurProjects/style.css
@@ -142,3 +142,8 @@
     border-radius: 6.82289px;
     margin-right: 28.89px;
 }
+
+.ProjectsTrackerBanner {
+    background: radial-gradient(55.78% 139.91% at 50% -36%, rgba(0, 194, 255, 0.2) 0%, rgba(65, 209, 255, 0) 100%), #000413;
+    height: 500px;
+}
