--- a/frontend/src/components/OurProjects/style.css
+++ b/frontend/src/components/OurProjects/style.css
@@ -14,6 +14,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&display=swap');
 
+@import url('http://fonts.cdnfonts.com/css/museo-sans-cyrl');
+
 .ProjectsDesc {
     display: flex;
     justify-content: space-between;
@@ -162,6 +164,7 @@
     height: 500px;
     overflow: hidden;
     position: relative;
+    z-index: 55;
 }
 
 .TrackerChaos {
@@ -248,7 +251,7 @@
     position: absolute;
     z-index: 1;
     left: 330px;
-    bottom: -50%;
+    top: -131px;
 }
 
 .ProjectsMyWorkContent {
@@ -284,20 +287,34 @@
     height: 500px;
     display: flex;
     justify-content: space-between;
+    z-index: 55;
 }
 
 .ProjectsEagleGoContent {
     background: #0D99FF;
     height: 100%;
+    width: 100%;
+    padding-left: 48px;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
+.EagleGoLogo {
+    width: 220.06px;
+    height: 255.43px;
+    margin-bottom: 26px;
+}
+
 .ProjectsEagleGoDesc {
-    font-family: 'Museo Sans Cyrl';
+    font-family: 'Museo Sans Cyrl', sans-serif;
+    color: #ffffff;
     font-style: normal;
     font-weight: 600;
     font-size: 24px;
     line-height: 29px;
+}
+
+.EagleGoGirl {
+    background-color: #0D99FF;
 }
