--- a/frontend/src/components/OurProjects/style.css
+++ b/frontend/src/components/OurProjects/style.css
@@ -318,3 +318,51 @@
 .EagleGoGirl {
     background-color: #0D99FF;
 }
+
+.ProjectsVivat {
+    display: flex;
+    padding: 0;
+}
+
+.ProjectsVivatContent {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.ProjectsVivatInfo {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.VivatLargeLogo {
+    height: 189px;
+    width: 336px;
+}
+
+.ProjectsVivatDesc {
+    font-family: 'Panton';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 150%;
+
+    background: linear-gradient(
+        161.22deg, 
+        rgba(239, 255, 61, 0.75) -4.93%, 
+        rgba(242, 255, 89, 0) 87.8%
+    ), #5EDE6B;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
+
+}
+
+.ProjectsVivatScreen {
+    display: flex;
+    align-items: flex-end;
+}
