--- a/frontend/src/components/OurProjects/style.css
+++ b/frontend/src/components/OurProjects/style.css
@@ -502,3 +502,103 @@
     bottom: 0;
     z-index: 3;
 }
+
+.ProjectsTatar {
+    position: relative;
+    background: #A7F0C3;
+    padding: 0;
+    overflow: hidden;
+}
+
+.ProjectsTatarContent {
+    position: relative;
+    height: 100%;
+}
+
+.ProjectTatarHeader, .ProjectsTatarDesc {
+    z-index: 4;
+    position: relative;
+}
+
+.ProjectsTatarText {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-between;
+    text-align: right;
+    padding: 25px;
+    height: 100%;
+}
+
+.ProjectsTatarMain {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.ProjectTatarHeader {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 60px;
+    color: #008A34;
+}
+
+.ProjectsTatarDesc {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    color: #047931;
+    width: 260px;
+}
+
+.ProjectsTatarLink {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 150%;
+    text-decoration-line: underline;
+    color: #0080C8;
+    z-index: 9;
+}
+
+.TatarContentBackground {
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 3;
+}
+
+.ProjectsTatarLogos {
+    left: 0;
+    position: absolute;
+    top: 0;
+    z-index: 2;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 20px 40px;
+}
+
+.TatarLogo {
+    width: 100%;
+    height: auto;
+}
+
+.TatarLogoB {
+    width: 70px;
+    height: 117px;
+}
+
+.TatarBackground {
+    position: absolute;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    fill: #71AB87;
+}
